Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97708

Error when compiling qanimationclipdata.cpp against qtbase/dev

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.3.0 Alpha
    • 6.3
    • Qt3D
    • None
    • 02fd7d7b488f0fd63c5c9d10977f4ab4b653fe27 (qt/qt3d/dev)

    Description

      Error when compiling qt3d against latest qtbase/dev

      C:\dev\qt\dev\src\qt3d\src\animation\frontend\qanimationclipdata.cpp(125): error C2440: 'return': cannot convert from 'QList<Qt3DAnimation::QChannel>::const_iterator' to 'Qt3DAnimation::QAnimationClipData::const_iterator'
      C:\dev\qt\dev\src\qt3d\src\animation\frontend\qanimationclipdata.cpp(125): note: No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called
      C:\dev\qt\dev\src\qt3d\src\animation\frontend\qanimationclipdata.cpp(130): error C2440: 'return': cannot convert from 'QList<Qt3DAnimation::QChannel>::const_iterator' to 'Qt3DAnimation::QAnimationClipData::const_iterator'
      C:\dev\qt\dev\src\qt3d\src\animation\frontend\qanimationclipdata.cpp(130): note: No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called
      [31/2944] Building CXX object qt5compat\src\imports\graphi...iles\qtgraphicaleffectsprivate.dir\qgfxsourceproxy.cpp.obj
      

      Attachments

        For Gerrit Dashboard: QTBUG-97708
        # Subject Branch Project Status CR V

        Activity

          People

            seanharmer Sean Harmer
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes