Fix compilation with latest qtbase

Make the conversion from QList<Type>::const_iterator to Type* pointer
explicit; since qtbase commit 0220484329029fc75, QList doesn't support
the implicit conversion anymore.

Fixes: QTBUG-97708
Change-Id: Ief96263871c5fd1179bf625d1c3d1c31c5def1c8
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>